charts/gitrot/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitrot
  labels:
    name: gitrot
