charts/gitrot/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitrot-backend-service
  labels:
    app: gitrot-backend
spec:
  selector:
    app: gitrot-backend
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
