charts/gitrot/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitrot-frontend-service
  labels:
    app: gitrot-frontend
spec:
  selector:
    app: gitrot-frontend
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
